Fix vari css, inizio wrapping bootstrap, Fix colori, Nuova box dati issue

--- a/static/less/buttons.less
+++ b/static/less/buttons.less
@@ -9,6 +9,7 @@
 // Core
 .btn {
   text-transform:uppercase;
+  text-shadow: rgba(50,50,50,.5) 1px 1px 1px;
   display: inline-block;
   .ie7-inline-block();
   padding: 6px 20px;
@@ -28,7 +29,6 @@
   // Hover/focus state
   &:hover,
   &:focus {
-    color: @black;
     text-decoration: none;
     //background-position: 0 -15px;
 
@@ -132,14 +132,6 @@ input[type="button"] {
 // --------------------------------------------------
 
 // Provide *some* extra contrast for those who can get it
-.btn-primary.active,
-.btn-warning.active,
-.btn-danger.active,
-.btn-success.active,
-.btn-info.active,
-.btn-inverse.active {
-  color: @black;
-}
 
 .btn-primary:active,
 .btn-warning:active,
@@ -150,10 +142,18 @@ input[type="button"] {
   .translate(0,0.2em);
 }
 
+.btn-warning:hover,
+.btn-danger:hover,
+.btn-success:hover,
+.btn-info:hover,
+.btn-inverse:hover {
+  color: @white;
+}
+
 // Set the backgrounds
 // -------------------------
 .btn-primary {
-  .buttonBackground(@btnPrimaryBackground, @btnPrimaryBackgroundHighlight);
+  .buttonBackground(@btnPrimaryBackground, @btnPrimaryBackgroundHighlight, @black);
   .box-shadow(~"hsl(39, 100%, 50%) 0 .1em 3px, hsl(39, 100%, 30%) 0 .3em 1px, rgba(0,0,0,0.3) 0 .6em 6px");
   border: 1px solid @btnPrimaryBackground;
   *border: 0; // Remove the border to prevent IE7's black border on input:focus
@@ -163,7 +163,8 @@ input[type="button"] {
   border-bottom-color: darken(@btnPrimaryBackground, 10%);
 }
 .btn-primary.active, .btn-primary:active  {
-  .buttonBackground(darken(@btnPrimaryBackground,10%), darken(@btnPrimaryBackgroundHighlight,5%));
+  color: @black;
+  .buttonBackground(darken(@btnPrimaryBackground,10%), darken(@btnPrimaryBackgroundHighlight,5%),@black);
   border-color: transparent;
 }
 
@@ -174,7 +175,8 @@ input[type="button"] {
 
 // Danger and error appear as red
 .btn-danger {
-  .buttonBackground(@btnDangerBackground, @btnDangerBackgroundHighlight);
+  color: @white;
+  .buttonBackground(@btnDangerBackground, @btnDangerBackgroundHighlight, @white);
   .box-shadow(~"hsl(23,98%,30%) 0 .1em 3px, hsl(23,98%,30%) 0 .3em 1px, rgba(0,0,0,0.3) 0 .6em 6px");
   border: 1px solid @btnDangerBackground;
   *border: 0; // Remove the border to prevent IE7's black border on input:focus
@@ -184,7 +186,8 @@ input[type="button"] {
   border-bottom-color: darken(@btnDangerBackground, 10%);
 }
 .btn-danger.active, .btn-danger:active  {
-  .buttonBackground(darken(@btnDangerBackground,10%), darken(@btnDangerBackgroundHighlight,5%));
+  color: @white;
+  .buttonBackground(darken(@btnDangerBackground,10%), darken(@btnDangerBackgroundHighlight,5%),@white);
   border-color: transparent;
 }
 // Success appears as green
@@ -193,7 +196,8 @@ input[type="button"] {
 }
 // Info appears as a neutral blue
 .btn-info {
-  .buttonBackground(@btnInfoBackground, @btnInfoBackgroundHighlight);
+  color: @white;
+  .buttonBackground(@btnInfoBackground, @btnInfoBackgroundHighlight, @white);
   .box-shadow(~"hsl(216,63%,44%) 0 .1em 3px, hsl(216,63%,44%) 0 .3em 1px, rgba(0,0,0,0.3) 0 .6em 6px");
   border: 1px solid @btnInfoBackground;
   *border: 0; // Remove the border to prevent IE7's black border on input:focus
@@ -203,7 +207,8 @@ input[type="button"] {
   border-bottom-color: darken(@btnInfoBackground, 10%);
 }
 .btn-info.active, .btn-info:active  {
-  .buttonBackground(darken(@btnInfoBackground,10%), darken(@btnInfoBackgroundHighlight,5%));
+  color: @white;
+  .buttonBackground(darken(@btnInfoBackground,10%), darken(@btnInfoBackgroundHighlight,5%),@white);
   border-color: transparent;
 }
 // Inverse appears as dark gray
